// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ontario-card > renders 1`] = `
<ontario-card class="hydrated">
  <mock:shadow-root>
    <li class="ontario-card ontario-card__card-type--basic ontario-card--position-vertical ontario-card__description-false">
      <div class="ontario-card__text-container">
        <h2 class="ontario-card__heading">
          <a href="#"></a>
        </h2>
      </div>
    </li>
  </mock:shadow-root>
</ontario-card>
`;

exports[`ontario-card > should render a description 1`] = `
<ontario-card description="Lorem ipsum" class="hydrated">
  <mock:shadow-root>
    <li class="ontario-card ontario-card__card-type--basic ontario-card--position-vertical">
      <div class="ontario-card__text-container">
        <h2 class="ontario-card__heading">
          <a href="#"></a>
        </h2>
        <div class="ontario-card__description">
          <p>
            Lorem ipsum
          </p>
        </div>
      </div>
    </li>
  </mock:shadow-root>
</ontario-card>
`;

exports[`ontario-card > should render a header colour on the label 1`] = `
<ontario-card label="Card Title 1" header-colour="sky" class="hydrated">
  <mock:shadow-root>
    <li class="ontario-card ontario-card__card-type--basic ontario-card--position-vertical ontario-card__description-false ontario-card__background--sky">
      <div class="ontario-card__text-container">
        <h2 class="ontario-card__heading ontario-card__heading--sky">
          <a href="#">
            Card Title 1
          </a>
        </h2>
      </div>
    </li>
  </mock:shadow-root>
</ontario-card>
`;

exports[`ontario-card > should render a label 1`] = `
<ontario-card label="Card Title 1" class="hydrated">
  <mock:shadow-root>
    <li class="ontario-card ontario-card__card-type--basic ontario-card--position-vertical ontario-card__description-false">
      <div class="ontario-card__text-container">
        <h2 class="ontario-card__heading">
          <a href="#">
            Card Title 1
          </a>
        </h2>
      </div>
    </li>
  </mock:shadow-root>
</ontario-card>
`;
